[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/topdown-shooter/PNG/Robot 1/robot1_hold.png" type="Texture" id=1]
[ext_resource path="res://characters/AI.gd" type="Script" id=2]
[ext_resource path="res://characters/Enemy.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.25, 21.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 125.004

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.75, 0 )
shape = SubResource( 1 )

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="DetectionZone" type="Area2D" parent="AI"]
position = Vector2( 22, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/DetectionZone"]
shape = SubResource( 2 )

[node name="PatrolTimer" type="Timer" parent="AI"]
wait_time = 3.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="AI"]
wait_time = 2.0
one_shot = true

[node name="MovementAudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="MovementAudioPlayer"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="AI/DetectionZone" to="AI" method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="AI/DetectionZone" to="AI" method="_on_DetectionZone_body_exited"]
